--- a/html/workouts.html
+++ b/html/workouts.html
@@ -19,7 +19,7 @@
 				<a href="workouts.html" class="nav-link">Тренировки</a>
 				<a href="diets.html" class="nav-link">Питание</a>
 				<a href="examples.html" class="nav-link">Представители</a>
-				<a href="about.html" class="nav-link">Об авторе</a>
+				<a href="about.html" class="nav-link">автор</a>
 			</nav>
 		</header>
 		<main class="container">
