--- a/html/about.html
+++ b/html/about.html
@@ -28,7 +28,7 @@
 					<h3 class="title-black">Об авторе</h3>
 					<div class="info-text-black">
 						<p>Здраствуйте!</p><br>
-						<p>Меня зовут Даниил.</p><br>
+						<p>Меня зовут Веренич Даниил.</p><br>
 						<p>Живу в Беларуси, Брестская область, город <a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%82%D0%BE%D0%BB%D0%B8%D0%BD" class="a-black">Столин</a>. Мне 15 лет. Учусь в Столинской государственной гимназии. В свободное время занимаюсь программированием, настольным теннисом, ну и конечно же воркаутом.</p><br>
 						<p>В воркауте уже полтора года. Так получилось, что меня заинтересовало программирование. Я думал, как можно связать, казалось бы, два совершенно разных дела... Но я нашёл способ и у меня, как видите, получилось. </p><br>
 						<p>В начале моего пути многие смеялись и не верили, что цели, которые я ставил перед собой, просто невозможны. Но я никого не слушал и продолжал двигаться вперёд, пока другие оставались на том же уровне. Каждые день я тренировался и развивался. Спустя полгода я увидел небольшой прогресс, которые подтолкнул меня на ещё большие действия.</p><br>	
