--- a/html/examples.html
+++ b/html/examples.html
@@ -34,7 +34,7 @@
 							по номинациям(статика,динамика). ТОП среди Street Workout в последующих статьях.</p><br>
 						<p><b>ТОП-3. Статика</b><br>В каждом топе будет хотя бы один атлет из стран СНГ. Вообще в статике много профессионалов. Но троих все же стоит выделить</p><br>
 						<p><b>3. <a href="https://www.instagram.com/eryc_ortiz/?hl=ru" class="nav-link">Eryc Ortiz.</a></b> Забытый многими воркаутер. Чемпион Мира по воркауту 2014-2015 года. Живет в Саудовской Аравии и там тренирует людей. Талантливый спортсмен. Для него горизонт, по сложности, как подтягивание.</p><br>
-						<p><b>2. Виктор Каменов.</b> Спортсмен из Болгарии, который мастерски выполняет "самолет" любой сложности.</p><br>
+						<p><b>2. <a href="https://https://newsvideo.su/sport/video/260026" class="nav-link">Виктор Каменов.</a></b> Спортсмен из Болгарии, который мастерски выполняет "самолет" любой сложности.</p><br>
 						<p><b>1. Osvaldo Lugones.</b> Человек входящий в команду ThenX. Он занимает первое место в топе. Мне кажется со мной многие согласятся. Его инстаграм насыщен бомбовыми видеороликами. Разнообразные элементы статики и динамики с атмосферной музыкой вызывают мурашки по коже. Заряжает мотивацией. К сожалению на соревнованиях не выступает.</p><br>
 						<p><b>ТОП-3. Динамика</b></p><br>
 						<p><b>3.Kabir Korash.</b> Малоизвестный в России спортсмен. Живет он в Германии. По моему мнению это спортсмен заслуживает третьего места. Конечно, много мощных атлетов из России и стран СНГ которые не уступают ему. Посмотрите в инстаграме на что он способен.</p><br>
