--- a/html/examples.html
+++ b/html/examples.html
@@ -44,6 +44,7 @@
 						<p><img src="img/tr.jpg"></p>
 						<p><a href="https://minsknews.by/tri-zapisi-v-knige-rekordov-ginnessa-dlya-nego-ne-predel-intervyu-s-belorusom-kotoryj-s-turnikami-na-ty/#:~:text=Максим%20Трухоновец%20установил%20несколько%20достижений,раз%20вписал%20туда%20свое%20имя." class="nav-link">Максим Трухоновец - гордость Белоруссии в мире воркаута.</a> Он держатель рекордов Гиннесса по подтягиваниям с дополнительным весом 18 кг (30 раз) и выходам силы (27 раз). 8 июня 2020 года он установил свой третий рекорд по выходам силы на кольцах, ему удалось сделать 18 повторений.</p><br>
 						<p>Максим многих замотивировал своими рекордами и тренировками на турниках. Правда есть и такие, которые скажут "у меня нет времени", "конечно у него своя площадка". Воркаут - это самый доступный сегодня вид спорта. Современные спортивные площадки есть даже в маленьких городках и это <b>бес-пла-тно.</b></p>
+						<p> <a href="https://yandex.by/video/preview/?text=Трухановец%20Давид%20-%20Городок&path=wizard&parent-reqid=1612961057818137-1824565756577025812600107-production-app-host-vla-web-yp-45&wiz_type=vital&filmId=10739451217118251104" class="nav-link">Видео открытия площадки в г. Давид-Городок (родной город Максима Трухоновца) </p>
 					</div>
 				</div>
 			</div>
