--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<main class="container">
 			<div class="block-1">
 				<div class="sidebar">
-					<p>В этом блоге я расскажу о своём увлечении и попытаюсь угадать <br>и ответить на ваши возможные вопросы:<br>“Что такое WORKOUT?”,  “Какие тренировки существуют<br>в этом виде спорта?”, “Какие личности прославились <br>благоларя этому спорту?”.</p>
+					<p>В этом блоге я расскажу о своём увлечении и попытаюсь угадать и ответить на ваши возможные вопросы:<br>“Что такое WORKOUT?”,  “Какие тренировки существуют<br>в этом виде спорта?”, “Какие личности прославились <br>благоларя этому спорту?”.</p>
 				</div>
 				<div class="block-text">
 					<h3 class="title-black">WORKOUT</h3>
