--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 				<div class="block-text">
 					<h3 class="title-yellow">Представители</h3>
 					<div class="info-text-yellow">
-						<p>И так представителей в воркауте довольно большое количество.</p><br>
+						<p>Ярких и достойных спортсменов в воркауте довольно большое количество. Очень приятно, что среди них нашлось место и представителю района в котором я родился и вырос</p><br>
 						<p>Тяжело определить лучшего потому что каждый спортсмен хорош в какой- то области. Кто-то имеет дикие силовые показатели, кто-то может отжиматься в планше на одной руке, а другой делает оборот в 720 градусов. Поэтому будем разделять воркаутеров по номинациям(статика,динамика). ТОП среди Street Workout в последующих статьях.</p><br>
-						<p><b>ТОП-3. Статика</b><br>В каждом топе будет хотя бы один атлет из СНГ. Вообще в статике много профессионалов. Но троих все же стоит выделить <a href="html/examples.html" class="a-yellow">... читать далее.</a></p>
+						<p><a href="html/examples.html" class="a-yellow">... читать далее.</a></p>
 					</div>
 				</div>
 			</div>
