--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 						<p>Ярких и достойных спортсменов в воркауте довольно большое количество. Очень приятно, что среди них нашлось место и <a href="https://workout.su/articles/487-vorkaut-v-licah-maksim-truhonovec-minsk-belarus">представителю района в котором я родился и вырос.</a></p><br>
 						<p>Тяжело определить лучшего, потому что каждый спортсмен хорош в какой- то области. Кто-то имеет дикие силовые показатели, кто-то может отжиматься в планше на одной руке, а другой делает оборот в 720 градусов. Поэтому будем разделять воркаутеров по номинациям(статика,динамика).</p><br>
 						<p><a href="html/examples.html" class="a-yellow">... читать далее.</a></p>
+						<p> <img src="img\tr.jpg"></p>
 					</div>
 				</div>
 			</div>
